--- a/src/app/components/mainpage/mainpage.component.html
+++ b/src/app/components/mainpage/mainpage.component.html
@@ -1,2 +1,5 @@
-<h1>{{titulo}}</h1>
-<p>{{comentario}}</p>
+<div>
+    <h1 style="text-align: center;">{{titulo}}</h1>
+    <p style="text-align: center;">{{comentario}}</p>
+</div>
+<div style="margin-bottom: 20%;"></div>
